# rest-lemmatizer

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  index.yaml
.github/: release-chart.yml  release-docker.yml
.github/workflows/: release-docker.yml  rust.yml
assets/: add-userdic.sh  userdic.csv
assets/noun-extractor-model/: noun_count  other_count
charts/: Chart.yaml  values.yaml
charts/rest-lemmatizer/: Chart.yaml  values.yaml
charts/rest-lemmatizer/templates/: storage-class.yaml  tokenizer.yaml  userdic.yaml
charts/templates/: userdic.yaml
hangul-normalize/: Cargo.toml
hangul-normalize/src/: lib.rs  main.rs
noun-extractor/: .gitignore  Cargo.toml  README.md
noun-extractor/benches/: evaluate.rs
noun-extractor/src/: lib.rs  main.rs  model.rs  model2.rs  store.rs  util.rs
rest-mecab/: Cargo.toml  Dockerfile  install-mecab.sh
rest-mecab/showcase/: package.json  pnpm-lock.yaml  svelte.config.js
rest-mecab/showcase/src/routes/: index.svelte
rest-mecab/src/: rest-tokenizer.rs  rest-userdic.rs  tokenizer.rs
scripts/: install-mecab.sh  test.sh
store/noun/: 000150.sst  000152.sst  000154.sst  000156.sst  IDENTITY  LOG  MANIFEST-000008  OPTIONS-000005
store/postfix/: 000287.sst  000289.sst  000291.sst  IDENTITY  LOG  MANIFEST-000008  OPTIONS-000005
