[package]
name = "noun-extractor"
version = "0.1.0"
authors = ["Eunchul Song <eunchulsong9@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "noun-extractor"
path = "src/main.rs"

[[bench]]
name = "evaluate"
harness = false

[features]
default = ["rocksdb"]
hashmap = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "3.0.0-beta.2"
rocksdb = { version = "0.15", optional = true }
speedy = "0.7"
bincode = "1"
tempfile = "3"
lazy_static = "1"
hashbrown = { version = "0.11" }
#faster-rs = { version = "0.11", optional = true }
borsh = "0.9"
log = "0.4"
env_logger = "0.8"
aho-corasick = "0.7"
#abomonation = "0.7"
