[package]
name = "noun-extractor"
version = "0.1.1"
authors = ["Eunchul Song <eunchulsong9@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "noun-extractor"
path = "src/main.rs"

[[bench]]
name = "evaluate"
harness = false

[features]
default = ["hashmap"]
hashmap = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = "^3.0.0-beta.4"
rocksdb = { version = "0.17", optional = true }
tempfile = "3"
bincode = "1"
log = "0.4"
env_logger = "0.9"
#aho-corasick = "0.7"
hyperloglog = { path = "../rust-hyperloglog" }
