[package]
name = "rest-mecab"
version = "0.2.0"
authors = ["Eunchul Song <eunchulsong9@gmail.com>"]
edition = "2018"

[[bin]]
name = "rest-tokenizer"
path = "src/rest-tokenizer.rs"

[[bin]]
name = "rest-userdic"
path = "src/rest-userdic.rs"

[dependencies]
actix-web = "4.0.0-beta.5"
actix-rt = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
awc = "3.0.0-beta.5"
anyhow = "1"
csv = "1"
async-rwlock = "1"
derive_more = "*"

mecab = "*"
blocking = "1"

bincode = "1"
futures = "0.3"

noun-extractor = { path = "../noun-extractor" }

rocksdb = { version = "0.15" }

hangul-normalize = { path = "../hangul-normalize" }

[dev-dependencies]
serial_test = "*"
actix-test = "0.1.0-beta.1"
